--- a/index.html
+++ b/index.html
@@ -20,15 +20,19 @@
 				<!-- Intro -->
 					<div id="intro">
 						<h1>My Portfolio</br>Jackson Taylor</h1>
-						<p>A showcase of my projects and abilities
+						<p>A showcase of my projects
 						</p>
 						<a href="https://github.com/jt-taylor">github.com/jt-taylor</a></a><br />
 					</br>
 						<a href="https://www.linkedin.com/in/jackson-tyler-taylor/">linkedin.com/in/jackson-tyler-taylor</a>
+				</br>
+					<p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
+					</p>
 					</div>
+			</div>
 
 				<!-- Header -->
 					<header id="header">
