--- a/index.html
+++ b/index.html
@@ -40,11 +40,12 @@
 					</header>
 
 				<!-- Nav -->
+				<!--
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html">This is Massively</a></li>
-						<!--	<li><a href="generic.html">Generic Page</a></li>-->
-						<!--	<li><a href="elements.html">Elements Referencea></li></-->
+						<li><a href="generic.html">Generic Page</a></li>
+						<li><a href="elements.html">Elements Referencea></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
@@ -53,6 +54,7 @@
 							<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 					</nav>
+				-->
 
 				<!-- Main -->
 					<div id="main">
@@ -60,16 +62,17 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<span class="date">April 25, 2017</span>
-									<h2><a href="#">And this is a<br />
-									massive headline</a></h2>
-									<p>Aenean ornare velit lacus varius enim ullamcorper proin aliquam<br />
-									facilisis ante sed etiam magna interdum congue. Lorem ipsum dolor<br />
-									amet nullam sed etiam veroeros.</p>
+									<!-- <span class="date">April 25, 2017</span> -->
+									<h2><a href="#">Lem-In</a><br /></h2>
+									<h4>A custom alg for the max flow in a network</h4>
+									<p>A customized alg based off of Edmond-Karps max-flow algorithm
+									but differs in that it is optimized for the minimum turn count to move
+									a given number of items from 1 room to anouther and not the true "maximum flow"
+									of the network</p>
 								</header>
 								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="#" class="button large">Full Story</a></li>
+									<li><a href="https://github.com/jt-taylor/lem-in_again" class="button large">View Code</a></li>
 								</ul>
 							</article>
 
