--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">Massively</a>
+						<a href="index.html" class="logo">Projects</a>
 					</header>
 
 				<!-- Nav -->
@@ -62,8 +62,7 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<!-- <span class="date">April 25, 2017</span> -->
-									<h2><a href="#">Lem-In</a><br /></h2>
+									<h3><a href="https://github.com/jt-taylor/lem-in_again">Lem-In (Network Pathfinding and flow Alg)</a><br /></h2>
 									<h4>A custom alg for the max flow in a network</h4>
 									<p>A customized alg based off of Edmond-Karps max-flow algorithm
 									but differs in that it is optimized for the minimum turn count to move
@@ -80,14 +79,14 @@
 							<section class="posts">
 								<article>
 									<header>
-										<span class="date">April 24, 2017</span>
-										<h2><a href="#">Sed magna<br />
-										ipsum faucibus</a></h2>
+										<h2><a href="#">Wolf3d<br />
+										A Raycasting Maze Game</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="https://github.com/jt-taylor/wolf3d" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+									<p>Graphics handled similar to the origional Wolfenstein Game that was a precurser to the game Doom,<br/>
+									uses a graphics library that only exposes the data stream for the window contents sans graphics functions</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="https://github.com/jt-taylor/wolf3d" class="button">View Code</a></li>
 									</ul>
 								</article>
 								<article>
