--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 									<p>Takes assembly language instructions for +,-,*,/,% on int32, float, and doubles<br/>
 									the utility functions are push, pop, dump, print, assert, and exit</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="https://github.com/jt-taylor/Abstract-VM" class="button">View Code</a></li>
 									</ul>
 								</article>
 								<article>
@@ -107,46 +107,23 @@
 										With the standard options of the command</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
-									<p>Recursive linked list approach, writes to terminal instead rather that ncurses/etc.</p>
+									<p>Recursive linked list approach, writes to terminal</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="https://github.com/jt-taylor/ft_ls" class="button">View Code</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<h2><a href="#">A simple Shell<br />
+										<h2><a href="#">Minishell: A simple Shell<br />
 										Only the required parts</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
 									<p></p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="https://github.com/jt-taylor/minishell" class="button">View Code</a></li>
 									</ul>
 								</article>
-								<article>
-									<header>
-										<span class="date">April 11, 2017</span>
-										<h2><a href="#">Odio magna<br />
-										sed consectetur</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<span class="date">April 7, 2017</span>
-										<h2><a href="#">Augue lorem<br />
-										primis vestibulum</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
-								</article>
+								
 							</section>
 
 						<!-- Footer -->
